--- a/SimpleTodo/app/build.gradle
+++ b/SimpleTodo/app/build.gradle
@@ -19,10 +19,16 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'commons-io:commons-io:2.4'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
